syntax = "proto3";
option go_package = "github.com/sanzharanarbay/golang_gRPC_mongoDB_example/internal/pb";
package pb;

message Category {
  string id = 1;
  string label = 2;
  int64 total = 3;
  bool status= 4;
  int64 order= 5;
  string created_at= 6;
  string updated_at = 7;
}

message ReadCategoryRequest {
  string id = 1;
}

message ReadCategoryResponse {
  Category category = 1;
}

message ListCategoryRequest {

}

message ListCategoryResponse {
  repeated Category categories = 1;
}

message CreateCategoryReq {
  string label = 1;
  int64 total = 2;
  bool status = 3;
  int64 order = 4;
}

message CreateCategoryResponse{
  int64 status = 1;
  string message = 2;
}

message UpdateCategoryReq {
  string id = 1;
  string label = 2;
  int64 total = 3;
  bool status = 4;
  int64 order = 5;
}

message UpdateCategoryResponse{
  int64 status = 1;
  string message = 2;
}

message DeleteCategoryRequest {
  string id = 1;
}

message DeleteCategoryResponse {
  int64 status = 1;
  string message = 2;
}

service CategoryService {
  rpc CreateCategory(CreateCategoryReq) returns (CreateCategoryResponse);
  rpc ReadCategory(ReadCategoryRequest) returns (ReadCategoryResponse);
  rpc UpdateCategory(UpdateCategoryReq) returns (UpdateCategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse);
  rpc ListCategories(ListCategoryRequest) returns (ListCategoryResponse);
}
